--- a/search-bar.css
+++ b/search-bar.css
@@ -11,7 +11,8 @@ body {
 
 #search-input {
     padding: 10px;
-    border: 1px solid #fff;
+    border: 1px solid #000;
+    background-color: #000;
     border-radius: 4px;
     width: 300px;
     box-sizing: border-box;
