--- a/search-bar.css
+++ b/search-bar.css
@@ -6,6 +6,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #000;
     margin-top: 50px;
 }
 
@@ -13,7 +14,7 @@ body {
     padding: 10px;
     border: 1px solid #000;
     background-color: #000;
-    border-radius: 4px;
+    border-radius: 0px;
     width: 300px;
     box-sizing: border-box;
 }
@@ -22,7 +23,7 @@ body {
     padding: 10px 20px;
     margin-left: 10px;
     border: none;
-    border-radius: 4px;
+    border-radius: 0px;
     background-color: #000;
     color: white;
     cursor: pointer;
