--- a/search-bar.css
+++ b/search-bar.css
@@ -7,6 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #000;
+    color: #fff;
     margin-top: 50px;
 }
 
@@ -14,6 +15,7 @@ body {
     padding: 10px;
     border: 1px solid #000;
     background-color: #000;
+    color: #fff;
     border-radius: 0px;
     width: 300px;
     box-sizing: border-box;
@@ -23,6 +25,7 @@ body {
     padding: 10px 20px;
     margin-left: 10px;
     border: none;
+    color: #fff;
     border-radius: 0px;
     background-color: #000;
     color: white;
