--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,19 @@
 }
 
 body {
-    font-family: Fira Code, Fira Code;
-    background-color: #000;
-    color: #fff;
+    font-family: 'Cartograph CF', Cartograph CF; /* Changed font */
+    background-color: #F0EDEC; /* Light mode background */
+    color: #685c56; /* Light mode text color */
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
 
+/* Container styles */
 .container {
     text-align: center;
-    background-color: #000;
+    background-color: #F0EDEC; /* Light mode container background */
     padding: 20px;
     border-radius: 0px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -30,16 +31,16 @@ header {
 }
 
 .ascii-art {
-    font-family: Fira Code;
+    font-family: 'Cartograph CF'; /* Changed font */
     white-space: pre;
     margin-bottom: 20px;
-    color: #fff;
+    color: #685c56; /* Light mode ASCII art color */
     text-align: center; /* Center align the ASCII art */
 }
 
 h1 {
     font-size: 2em;
-    color: #fff;
+    color: #685c56; /* Light mode heading color */
 }
 
 .links {
@@ -48,7 +49,7 @@ h1 {
 
 .link {
     display: block;
-    color: #fff;
+    color: #685c56; /* Light mode link color */
     text-decoration: none;
     font-size: 1.2em;
     margin: 10px 0;
@@ -61,9 +62,31 @@ h1 {
 footer {
     margin-top: 20px;
     font-size: 0.9em;
-    color: #fff;
+    color: #685c56; /* Light mode footer color */
 }
 
-src {
-color: #fff;
+/* Dark Mode Styles */
+body.dark-mode {
+    background-color: #000; /* Dark mode background */
+    color: #fff; /* Dark mode text color */
+}
+
+.container.dark-mode {
+    background-color: #000; /* Dark mode container background */
+}
+
+.ascii-art.dark-mode {
+    color: #fff; /* Dark mode ASCII art color */
+}
+
+h1.dark-mode {
+    color: #fff; /* Dark mode heading color */
+}
+
+.link.dark-mode {
+    color: #fff; /* Dark mode link color */
+}
+
+footer.dark-mode {
+    color: #fff; /* Dark mode footer color */
 }
