--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@
 body {
   background-color: var(--bg);
   color: var(--fg);
+font-family: 'Cartograph CF', Cartograph CF; 
 }
 
 h1, h2, h3, h4, h5, h6 {
